@startuml campaign-class
Interface OrderInfoInterface {
    +getUser():User
    +getOrderItems():[]
    +getPayTotal():int
}
interface CampaignInterface {
    +getStartTime(): DateTime
    +getEndTime(): DateTime
    +addProduct(Product $product):void
    +calculatePrice(OrderInfoInterface orderInfo):int
    +isQualified(OrderInfoInterface orderInfo):bool
}
interface PricePolicyInterface {
    +calculatePrice(OrderInfoInterface orderInfo):int
}
interface PriceStrategyInterface {
    +calculate(OrderInfoInterface orderInfo):int
}
interface QualificationPolicyInterface {
    +isQualified(OrderInfoInterface orderInfo):bool
}
interface QualificaitonStrategyInterface {
    +isQualified(CampaignInterface campaign, OrderInfoInterface orderInfo):bool
}

abstract OrmModel {
    +createInstance():void
    +updateInstance():void
    +findById(int id):OrmModel
    +delete(int id):void
}

class Campaign <<OrmModel>> {
    +products():Collection
}
class PricePolicy <<OrmModel>> {
    -strategy:string
    -parameters: string
}
class OverMinusPriceStrategy
class QualificationPolicy <<OrmModel>> {
    -strategy:string
    -parameters: string
}
class ParticipateCountQualificationStrategy
class CampaignService {
    +create(array data)
    +update(array data)
    +delete(int id)
    +findById(int id)
}


PricePolicyInterface <|.. PricePolicy
PriceStrategyInterface <|.. OverMinusPriceStrategy
QualificationPolicyInterface <|.. QualificationPolicy
QualificaitonStrategyInterface <|.. ParticipateCountQualificationStrategy
CampaignInterface <|-- Campaign

Campaign "1" o-- "0..1" PricePolicy : has
Campaign "1" o-- "0..1" QualificationPolicy : has
PricePolicy --> "1" PriceStrategyInterface
QualificationPolicy --> "1" QualificaitonStrategyInterface
CampaignService --> "1" Campaign : uses
@enduml

@startuml campaign-sequence
actor User
boundary CampaignService

group Uses Strategy
    User -> CampaignService: IsQualified(OrderInfoInterface info)
    CampaignService -> Campaign: Isqualified(OrderInfoInterface info)
    Campaign -> QulificationStrategyInterface: Isqualified(OrderInfoInterface info)
    QualificationStrategyInterface --> Campaign: True | False
    Campaign --> CampaignService: True | False
    CampaignService --> User: True | False
    note over Campaign : The `Calculate` method shares the similiar sequence but call the `PricePolicyStrategy`
end

group Campaign CRUD
    User -> CampaignService: create(array data)
    note right: throws IllegalArgumentException upon validation failure
    CampaignService -> Campaign: createInstance(array data)
    note over CampaignService: `Update`, `Delete` and `FindById` shares the similar sequence
end
@enduml
